@@ -26,5 +26,6 @@ int tiecom(MUD &engine, Action &act_used);
 int untiecom(MUD &engine, Action &act_used);
 int failcom(MUD &engine, Action &act_used);
 int gotocom(MUD &engine, Action &act_used);
+int killcom(MUD &engine, Action &act_used);
 
 #endif // ifndef ACTIONS
