@@ -1,6 +1,9 @@
-06/17/2020
+06/18/2020
 - Added the goto command
 - Added some container management specials functions
+- Added the kill command
+- Added checks to force id to be lowercase
+- Made deathrooms with the Death flag kill players that enter
 
 06/16/2020
 - Fixed Python integration that caused a crash when a script exception happened
